testing with sudo

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: python
 python:
     - "3.5"
 before_install:
-    - pip install pytest pytest-cov
-    - pip install coveralls
+    - sudo pip install pytest pytest-cov
+    - sudo pip install coveralls
 script:
     - py.test
 after_success:
